# CMakeList.txt : Top-level CMake project file, do global configuration
# and include sub-projects here.
#
cmake_minimum_required (VERSION 3.8)

project ("ltx_test1")

# Include sub-projects.
add_subdirectory ("ltx_test1")
add_subdirectory ("ltx_test2")
add_subdirectory ("ltx_test3")
add_subdirectory ("ltx_test4")
add_subdirectory ("ltx_test5")
add_subdirectory ("ltx_test6")
add_subdirectory ("ltx_test7")
add_subdirectory ("ltx_test8")

